force-app/main/default/objects/Surgery_Information__c/Surgery_Information__c.object-meta.xml
<CustomObject>
    <label>Surgery Information</label>
    <nameField>
        <displayFormat>SI-{000000}</displayFormat>
        <label>Surgery Information Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surgery Information</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>