force-app/main/default/objects/Surgery_Information__c/fields/Competitor_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Manufacturer__c</fullName>
    <label>Competitor/Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Biomet</fullName>
                <color>#660000</color>
                <label>Biomet</label>
            </value>
            <value>
                <fullName>Depuy</fullName>
                <color>#78C953</color>
                <label>Depuy</label>
            </value>
            <value>
                <fullName>Exactec</fullName>
                <color>#E27001</color>
                <label>Exactec</label>
            </value>
            <value>
                <fullName>Smith and Nephew</fullName>
                <color>#A845DC</color>
                <label>Smith and Nephew</label>
            </value>
            <value>
                <fullName>Stryker</fullName>
                <color>#333333</color>
                <label>Stryker</label>
            </value>
            <value>
                <fullName>Synthes</fullName>
                <color>#A53711</color>
                <label>Synthes</label>
            </value>
            <value>
                <fullName>Tournier</fullName>
                <color>#66E9BD</color>
                <label>Tournier</label>
            </value>
            <value>
                <fullName>Wright Medical</fullName>
                <color>#F3D904</color>
                <label>Wright Medical</label>
            </value>
            <value>
                <fullName>Zimmer</fullName>
                <color>#0B6FCE</color>
                <label>Zimmer</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <color>#DDDDDD</color>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>