force-app/main/default/objects/Surgery_Information__c/fields/Consumer__c.field-meta.xml
<CustomField>
    <fullName>Consumer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Surgery Information</relationshipLabel>
    <relationshipName>Surgery_Information</relationshipName>
    <type>Lookup</type>
</CustomField>