force-app/main/default/objects/Surgery_Information__c/fields/Lead_Origination_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Origination_Date__c</fullName>
    <description>Date the discussions/interactions started taking place regarding this particular surgery.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the discussions/interactions started taking place regarding this particular surgery.</inlineHelpText>
    <label>Lead Origination Date</label>
    <type>Date</type>
</CustomField>