force-app/main/default/objects/Surgery_Information__c/fields/Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time__c</fullName>
    <description>Calculates lead time for elected surgery information</description>
    <formula>Surgery_Date__c  -  Lead_Origination_Date__c</formula>
    <inlineHelpText>Calculates lead time for elected surgery information</inlineHelpText>
    <label>Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>