force-app/main/default/objects/Surgery_Information__c/fields/Lead_Time_Group__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Group__c</fullName>
    <formula>IF(   Lead_Time__c &lt; 182 , &quot; A. 0-6 Months&quot;,
IF( Lead_Time__c &lt; 365 , &quot;B. 6-12 Months&quot;,
IF( Lead_Time__c &lt; 547 , &quot;C. 12-18 Months&quot;,
IF(Lead_Time__c &lt; 730, &quot;D. 18-24 Months&quot;,
&quot;E. 24+ Months&quot;) )))</formula>
    <label>Lead Time Group</label>
    <type>Text</type>
</CustomField>