force-app/main/default/objects/Surgery_Information__c/fields/Physician_Name__c.field-meta.xml
<CustomField>
    <fullName>Physician_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>