force-app/main/default/objects/Surgery_Information__c/fields/Product_Implanted__c.field-meta.xml
<CustomField>
    <fullName>Product_Implanted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Implanted</label>
    <length>100</length>
    <type>Text</type>
</CustomField>