force-app/main/default/objects/Surgery_Information__c/recordTypes/Consumer.recordType-meta.xml
<RecordType>
    <fullName>Consumer</fullName>
    <active>true</active>
    <description>This is the record type to capture Consumer related Surgery Information</description>
    <label>Consumer</label>
</RecordType>